# thinkrail

./: .bonsaihide  .env.example  .gitignore  .thinkrailhide  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_PLAN.md  DESIGN_DOC.md  DESIGN_SYSTEM_PLAN.md  GOAL&REQUIREMENTS.md  LICENSE  README-CLAUDE.md  README.md  REMOTE_DESIGN.md  TODO.md  TODOs_ROAD_MAP.md  VISUALIZATION.md  WEBVIEW.md  architecture.md  biome.json  build_and_install.sh  deploy.sh  goal-and-requirements.md  install-from-source.sh  install.sh  package-lock.json  package.json  playwright.binary.config.ts  playwright.config.ts  playwright.workflows.config.ts  run.sh  turbo.json
backend/: pyproject.toml
backend/app/: _version.py  cli.py  main.py  upgrade.py  version.py
backend/app/agent/: CONTEXT.md  PERSISTENCE.md  README.md  REVISE.md  TRANSCRIBE.md  __init__.py  artifacts.py  available_runtimes.py  context.py  exceptions.py  model_registry.py  models.py  permissions.py  persistence.py  pricing.py  revise.py  runner.py  service.py  subagents.py  todo_snapshot.py  tracker.py  transcribe.py  visualization.py
backend/app/analytics/: README.md  __init__.py  consent.py  models.py  service.py
backend/app/api/: __init__.py  deps.py  errors.py  schemas.py
backend/app/board/: PLAN_SERVICE.md  README.md  __init__.py  artifact_paths.py  models.py  ops.py  patch.py  plan.py  service.py  spec_drafts.py  state_machine.py  storage.py  ticket_state.py  work_node.py
backend/app/core/: APP_STORE.md  README.md  SERVER_STORE.md  __init__.py  app_store.py  bonsaihide.py  config.py  fileio.py  network_info.py  project.py  server_store.py  session_defaults.py  settings.py  thinkrailhide.py  watcher.py
backend/app/rpc/: AUTH_MIGRATION.md  README.md  __init__.py  auth.py  bus.py  connections.py  context.py  errors.py  notifications.py  project_context.py  schema_export.py  server.py
backend/app/spec/: FRONTMATTER_SCHEMA.md  INDEX_CONCURRENCY.md  README.md  __init__.py  coordinator.py  frontmatter.py  graph.py  index.py  models.py  parser.py  registry.py  (+2 more)
backend/tests/: test_cli.py  test_delete_ticket.py  test_upgrade.py  test_version.py
(+1813 files in other folders)
