[project]
name = "bonsai-backend"
version = "0.1.0"
description = "Bonsai — specification-driven development workspace"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "watchfiles>=1.0",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "jsonrpcserver>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
