[project]
name = "tr-backend"
version = "0.1.0"
description = "ThinkRail — specification-driven development workspace"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "watchfiles>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jsonrpcserver>=5.0",
    "claude-agent-sdk==0.2.99",
    "pydantic-settings>=2.13.1",
    "pathspec>=1.0.4",
    "anthropic>=0.105.2",
    "aiosqlite>=0.22.1",
    "aiofiles>=24.1",
]

[project.optional-dependencies]
transcription = [
    "openai>=1.0",
]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
